[package]
name = "epid"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
bls12_381 = { git="https://github.com/akakou/bls12_381/", branch="main", features=["serde"] }
ff = "0.9.0"
group = "0.9.0"